--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Json Resume Tool for macOS",
   "main": "index.js",
   "scripts": {
-    "dl": "curl -sL https://gitconnected.com/v1/portfolio/$GH_UN >> resume.json",
+    "dl": "curl -sL https://gitconnected.com/v1/portfolio/$GH_UN > resume.json",
     "start": "npm run clean && npm run export:pdf && npm run open",
     "clean": "rm -f resume_$THEME.pdf",
     "export:pdf": "resume export resume_$THEME.pdf --theme $THEME",
